[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-semantic-cache"
version = "0.1.1"
authors = [
  { name="Sandy Wicaksono", email="sandywidarman@gmail.com" },
]
description = "A robust middleware for hybrid semantic caching, text normalization, and vector search optimization."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi",
    "uvicorn",
    "sentence-transformers",
    "faiss-cpu",
    "google-generativeai",
    "matplotlib",
    "numpy",
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["hybrid_semantic_cache"]