[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-semantic-cache"
version = "0.2.0"
authors = [
  { name="Sandy Wicaksono", email="sandywidarman@gmail.com" },
]
description = "FAISS-backed hybrid semantic caching for LLM apps: text normalization, similarity lookup, LRU eviction, and disk persistence."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["semantic-cache", "llm", "faiss", "embeddings", "caching", "middleware"]
# Core runtime dependencies only. The FastAPI demo and the Gemini fallback
# live behind the optional [demo] extra so library consumers stay lean.
dependencies = [
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
demo = [
    "fastapi",
    "uvicorn",
    "google-generativeai",
]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/shencell/hybrid-semantic-cache"
Repository = "https://github.com/shencell/hybrid-semantic-cache"
Issues = "https://github.com/shencell/hybrid-semantic-cache/issues"
Changelog = "https://github.com/shencell/hybrid-semantic-cache/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["hybrid_semantic_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
